Made non-context classloader pluggable as `java.system.class.loader` does not allow for reloading.